--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,1 +1,6 @@
-{{test}}
+<div class="main-div">
+    <p>Welcome to Rock-Paper-Scissors</p>
+    
+    <button id="lets-go" type="button">Let's Go</button>
+    
+</div>
