applying the wireframe

--- a/views/game.html
+++ b/views/game.html
@@ -1,3 +1,7 @@
 <div class="main-div">
-    
+    <div class="choices-btns">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
 </div>
