--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,6 +1,6 @@
 <div class="main-div">
     <p>Welcome to Rock-Paper-Scissors</p>
-    
-    <button id="lets-go" type="button">Let's Go</button>
-    
+    <div class="btn-wrapper">
+    <button id="lets-go" type="button" ng-click="goToPlay()">Let's Go</button>
+    </div>
 </div>
