--- a/style/main.css
+++ b/style/main.css
@@ -5,6 +5,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: lightslategray;
+    box-sizing: border-box;    
 }
 .main-div{
     margin: auto;
@@ -13,11 +14,13 @@ body {
     margin-top: 5%;
     background-color: lightcoral;
     text-align: center;
+    border-radius: 10%;
 }
 .main-div > p{
     font-family: sans-serif;
     font-size: 28pt;
     color: lightgoldenrodyellow;
+    padding-top: 50px;
 }
 #lets-go{
     width: 60%;
@@ -25,5 +28,24 @@ body {
     border-radius: 100%;
     box-shadow: 3px 3px pink; 
     background-color: lightsalmon;
-    margin-top: 70%;
+    margin-top: 20%;
+    height: 75px;
+    color: lightgoldenrodyellow;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 18pt;
+}
+.choices-btns{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 15%;    
+}
+#scissors , #paper, #rock{
+    width: 20%;
+    border-radius: 100%;
+    box-shadow: 3px 3px pink; 
+    background-color: lightsalmon;
+    height: 35px;
+    color: lightgoldenrodyellow;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 18pt;
 }
