setting some test functions

--- a/views/game.html
+++ b/views/game.html
@@ -1,7 +1,10 @@
 <div class="main-div">
     <div class="choices-btns">
-        <button id="rock">Rock</button>
+        <button id="rock" ng-click="testFunc()">Rock</button>
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
+    </div>
+    <div class="img-container">
+        
     </div>
 </div>
