--- a/style/main.css
+++ b/style/main.css
@@ -49,3 +49,10 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 18pt;
 }
+.img-container{
+    background-color: white;
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    margin-top: 20px;
+}
