--- a/style/main.css
+++ b/style/main.css
@@ -15,6 +15,8 @@ body {
     background-color: lightcoral;
     text-align: center;
     border-radius: 10%;
+    border: 1px solid lightgoldenrodyellow;
+    box-shadow: 3px 3px 6px pink;     
 }
 .main-div > p{
     font-family: sans-serif;
@@ -49,14 +51,22 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 18pt;
 }
+.middle-container {
+    width: 100%;
+    height: 35%;
+    padding-top: 45px;
+    display: flex;
+    justify-content: space-around;    
+}
+.middle-container > h1{
+    color: lightgoldenrodyellow;    
+}
 .img-container{
-    background-color: white;
-    width: 100px;
-    height: 100px;
-    margin: auto;
-    margin-top: 20px;
+    width: 35%;
+    height: 85%;
 }
 .img-container > img{
     width: 100%;
     height: 100%;
+    border-radius: 35%;    
 }
