--- a/style/main.css
+++ b/style/main.css
@@ -5,12 +5,18 @@ body {
     margin: 0;
     padding: 0;
     background-color: lightslategray;
+    background-image: -webkit-linear-gradient(top, #c5d6e6, lightslategray);
+    background-image: -moz-linear-gradient(top, #c5d6e6,lightslategray);
+    background-image: -ms-linear-gradient(top, #c5d6e6, lightslategray);
+    background-image: -o-linear-gradient(top, #c5d6e6,lightslategray);
+    background-image: linear-gradient(to bottom, #c5d6e6, lightslategray); 
     box-sizing: border-box;    
+    background-repeat: no-repeat;
 }
 .main-div{
     margin: auto;
     height: 75vh;
-    width: 70vw;
+    width: 50vw;
     margin-top: 5%;
     background-color: lightcoral;
     text-align: center;
@@ -41,15 +47,28 @@ body {
     justify-content: space-around;
     padding-top: 15%;    
 }
-#scissors , #paper, #rock{
+.choices-btns > input{
     width: 20%;
     border-radius: 100%;
     box-shadow: 3px 3px pink; 
     background-color: lightsalmon;
+    background-image: -webkit-linear-gradient(top, lightsalmon, #da6739);
+    background-image: -moz-linear-gradient(top, lightsalmon,#da6739);
+    background-image: -ms-linear-gradient(top, lightsalmon, #da6739);
+    background-image: -o-linear-gradient(top, lightsalmon,#da6739);
+    background-image: linear-gradient(to bottom, lightsalmon, #da6739); 
     height: 35px;
     color: lightgoldenrodyellow;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 18pt;
+    font-size: 18pt;   
+}
+.choices-btns > input:hover{
+    background-color: #da6739;
+    background-image: -webkit-linear-gradient(top,  #da6739,lightsalmon);
+    background-image: -moz-linear-gradient(top,#da6739,lightsalmon);
+    background-image: -ms-linear-gradient(top, #da6739,lightsalmon);
+    background-image: -o-linear-gradient(top,#da6739,lightsalmon);
+    background-image: linear-gradient(to bottom #da6739,lightsalmon); 
 }
 .middle-container {
     width: 100%;
@@ -58,8 +77,17 @@ body {
     display: flex;
     justify-content: space-around;    
 }
-.middle-container > h1{
+.img-container > P{
     color: lightgoldenrodyellow;    
+    font-family: Georgia, 'Times New Roman', Times, serif;    
+}
+.vs-text{
+    display: flex;
+}
+.vs-text > h1 {
+    color: lightgoldenrodyellow;    
+    font-family: Georgia, 'Times New Roman', Times, serif;  
+    align-self: center;
 }
 .img-container{
     width: 35%;
@@ -68,5 +96,16 @@ body {
 .img-container > img{
     width: 100%;
     height: 100%;
-    border-radius: 35%;    
+    border-radius: 35%; 
+    border: 2px solid lightsalmon ;
+}
+.score-container{
+    margin-top: 50px;
+    width: 100%;
+   text-align: center;
+}
+.score-container > p{
+    color: lightgoldenrodyellow;    
+    font-family: Georgia, 'Times New Roman', Times, serif; 
+    font-size: 20pt; 
 }
