seeting up the counter

--- a/views/game.html
+++ b/views/game.html
@@ -1,8 +1,9 @@
 <div class="main-div">
+    <div class="timer-container">
+        <p>Timer: {{timer}}</p>
+    </div>
+    <button ng-click="count('{{timer}}')">play</button>
     <div class="choices-btns">
-        <!-- <button id="rock" ng-click="testFunc()">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button> -->
         <input id="rock" type="button" value="rock" ng-model="rock" ng-click='getVal("rock"); pickRandomVal(gameData)'>
         <input id="paper" type="button" value="paper" ng-model="paper" ng-click='getVal("paper"); pickRandomVal(gameData)'>
         <input id="scissors" type="button" value="scissors" ng-model="scissors" ng-click='getVal("scissors"); pickRandomVal(gameData)'>
@@ -14,7 +15,7 @@
             </div>
             <div class="vs-text"><h1>VS</h1></div>
             <div class="img-container">
-                <img ng-src="{{randomVal}}" alt=""> <br>
+                <img ng-src="{{randomVal}}" class="inverted-img" alt=""> <br>
                 <p>Bot</p>
             </div>
         </div>
