--- a/style/main.css
+++ b/style/main.css
@@ -99,6 +99,14 @@ body {
     border-radius: 35%; 
     border: 2px solid lightsalmon ;
 }
+.inverted-img{
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: "FlipH"
+}
 .score-container{
     margin-top: 50px;
     width: 100%;
