i just did a test

--- a/style/main.css
+++ b/style/main.css
@@ -14,6 +14,7 @@ body {
     background-repeat: no-repeat;
 }
 .main-div{
+    /* hello this is just a test */
     margin: auto;
     height: 75vh;
     width: 50vw;
